# hpoea

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  run_tests.sh
.github/workflows/: ci.yml
apps/: 04_custom_problem.cpp  08_sga_optimization.cpp  09_de1220_optimization.cpp  10_knapsack_optimization.cpp  11_knapsack_hyperparameter_optimization.cpp  CMakeLists.txt  README.md  basic_ea_example.cpp  basic_hpo_example.cpp  benchmark_suite.cpp  cli.cpp  cmaes_optimization_example.cpp  correctness_test.cpp  custom_parameter_space_example.cpp  custom_problem_example.cpp  de1220_optimization_example.cpp  experiment_management_example.cpp  hpoea_cli.cpp  knapsack_hpo_example.cpp  knapsack_optimization_example.cpp  knapsack_pso_sa_example.cpp  optimizer_comparison_example.cpp  search_space_example.cpp  sfu_benchmark_test.cpp  sga_optimization_example.cpp  simple_example.cpp  test_util.hpp
apps/cli/: dispatch.cpp  dispatch.hpp
docs/: extending_algos.md  hyperparameter_optimization.md  reference.md
examples/configs/: basic_experiment.toml
include/hpoea/config/: config_descriptors.hpp  config_parser.hpp  config_types.hpp  config_validator.hpp  suite_expander.hpp  supported_types.hpp
include/hpoea/core/: baseline_optimizer.hpp  budget_checks.hpp  error_classification.hpp  evolution_algorithm.hpp  experiment.hpp  hyper_optimizer_base.hpp  hyperparameter_optimizer.hpp  logging.hpp  parameters.hpp  problem.hpp  random_search_optimizer.hpp  search_space.hpp  seeding.hpp  types.hpp
include/hpoea/wrappers/pagmo/: algorithm_base.hpp  cmaes_algorithm.hpp  cmaes_hyper.hpp  de1220_algorithm.hpp  de_algorithm.hpp  hyper_optimizer_base.hpp  nm_hyper.hpp  pso_algorithm.hpp  pso_hyper.hpp  sa_hyper.hpp  sade_algorithm.hpp  sga_algorithm.hpp
include/hpoea/wrappers/problems/: benchmark_problems.hpp
src/: CMakeLists.txt
src/config/: config_descriptors.cpp  config_parser.cpp  config_validator.cpp  path_helpers.hpp  suite_expander.cpp
src/core/: baseline_optimizer.cpp  error_classification.cpp  experiment.cpp  hyper_optimizer_base.cpp  logging.cpp  parameters.cpp  random_search_optimizer.cpp  search_space.cpp
src/wrappers/pagmo/: CMakeLists.txt  algorithm_base.cpp  budget_util.hpp  cmaes_algorithm.cpp  cmaes_hyper.cpp  de1220_algorithm.cpp  de_algorithm.cpp  hyper_optimizer_base.cpp  hyper_tuning_udp.hpp  hyper_util.hpp  nm_hyper.cpp  problem_adapter.hpp  pso_algorithm.cpp  pso_hyper.cpp  sa_hyper.cpp  sade_algorithm.cpp  sga_algorithm.cpp
src/wrappers/problems/: benchmark_problems.cpp
tests/: CMakeLists.txt  baseline_optimizer_tests.cpp  benchmark_problem_tests.cpp  benchmark_problems_test.cpp  benchmark_suite.cpp  budget_util_tests.cpp  cli_pagmo_smoke_tests.cpp  cli_pagmo_tests.cpp  cli_tests.cpp  cli_util.hpp  cmaes_hyper_test.cpp  config_descriptor_tests.cpp  config_parser_tests.cpp  config_validator_tests.cpp  correctness_test.cpp  de_wrapper_test.cpp  evolutionary_algorithms_tests.cpp  experiment_manager_tests.cpp  hyper_optimizer_tests.cpp  hyper_test.cpp  hyper_tuning_udp_tests.cpp  integration_test.cpp  logging_tests.cpp  nm_hyper_test.cpp  parallel_experiment_test.cpp  parameter_space_tests.cpp  problem_adapter_tests.cpp  pso_hyper_test.cpp  pso_wrapper_test.cpp  random_search_optimizer_tests.cpp  sa_hyper_test.cpp  sade_wrapper_test.cpp  search_space_test.cpp  search_space_tests.cpp  suite_expander_tests.cpp  test_fixtures.hpp  test_harness.hpp  test_utils.hpp  transform_bounds_tests.cpp  types_budget_tests.cpp  (+1 more)
tests/fixtures/configs/: custom_ids_valid.toml
